# icoforge

./: .gitignore  =9.0.0  CHANGELOG.md  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.txt  epubTools Suite icon.png:Zone.Identifier  icoforge.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AUDYT_GUI_KIT.md  CO_ROBI_CLAUDE_CODE.md  FEATURES.md  FEATURES.md:Zone.Identifier  GETTING_STARTED.md  PROMPTY.md  PROMPTY.md:Zone.Identifier  ROADMAP.md  ZALOZENIA_PROJEKTU.md
hooks/: rthook_cairo.py
installer/: icoforge.iss
scripts/: build_windows.py  collect_cairo_dlls.py
src/icoforge/: __init__.py  __main__.py  _version.py  cli.py
src/icoforge/core/: __init__.py  bg_remover.py  color_utils.py  converter.py  cur_writer.py  exe_extractor.py  favicon_generator.py  heic_loader.py  icns_writer.py  ico_reader.py  ico_writer.py  image_utils.py  limits.py  models.py  optimizer.py  presets.py  resampling.py  svg_loader.py
src/icoforge/gui/: __init__.py  ai_installer.py  bg_remove_worker.py  help_window.py  icons.py  main_window.py  workers.py
src/icoforge/gui/editor/: __init__.py  canvas.py  color_indicator.py  commands.py  editor_window.py  export_utils.py  new_ico_dialog.py  palette.py  templates.py  tools.py
src/icoforge/gui/widgets/: file_drop_zone.py  optimization_panel.py  presets_manager_dialog.py  preview_panel.py  settings_panel.py
src/icoforge/translations/: icoforge_en.qm  icoforge_en.ts
src/icoforge/utils/: native_event_filter.py  paths.py  python_finder.py  recent_files.py  settings.py  theme.py  version_check.py  window_state.py  window_theme.py
tests/: conftest.py  test_bg_remover.py  test_cli.py  test_color_indicator.py  test_converter.py  test_cur_writer.py  test_dialogs_use_gui_kit.py  test_editor_icon_toolbar.py  test_editor_tools_integration.py  test_editor_workflow.py  test_exe_extractor.py  test_export_utils.py  test_favicon_generator.py  test_formats.py  test_heic.py  test_icns_writer.py  test_ico_reader.py  test_ico_writer.py  test_icon_provider.py  test_image_utils.py  test_limits.py  test_main_window_editor.py  test_malformed_inputs.py  test_models.py  test_new_ico_dialog.py  test_optimizer.py  test_palette.py  test_presets.py  test_recent_files.py  test_resampling.py  test_save_ico.py  test_svg.py  test_templates.py  test_undo_redo.py  test_window_state.py  test_zoom_controls.py
tests/fixtures/: photo.tiff
