[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icoforge"
version = "1.1.0"
description = "ICO file converter, optimizer and pixel editor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Marcin" }]
keywords = ["ico", "icon", "converter", "png", "optimizer", "pixel-editor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "Pillow>=10.2.0",
    "numpy>=1.26.0",
    "PySide6>=6.6.0",
    "pyoxipng>=9.0.0",
    "click>=8.1.7",
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7.0"]
svg-resvg = ["resvg-py"]
heic = ["pillow-heif>=0.16.0"]
bgremove = ["rembg>=2.0.50"]
exe = ["pefile>=2023.2.7"]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-Pillow",
]
all = ["icoforge[svg,heic,bgremove,exe]"]

[project.scripts]
icoforge = "icoforge.__main__:run_gui"
icoforge-cli = "icoforge.cli:main"

[project.urls]
Repository = "https://github.com/your-user/icoforge"
Issues = "https://github.com/your-user/icoforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/icoforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PTH", # use pathlib
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/icoforge/gui/**" = ["N802"]  # Qt requires camelCase override names

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["oxipng.*", "cairosvg.*", "resvg_py.*", "rembg.*", "pillow_heif.*", "pefile.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "gui: marks tests that require Qt",
]

[tool.coverage.run]
source = ["src/icoforge"]
omit = ["src/icoforge/gui/*"]  # GUI tested separately

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
