[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icoforge"
version = "1.3.0"
description = "ICO file converter, optimizer and pixel editor"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Marcin" }]
keywords = ["ico", "icon", "converter", "png", "optimizer", "pixel-editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "Pillow>=10.2.0",
    "numpy>=1.26.0",
    "PySide6>=6.6.0",
    "pyoxipng>=9.0.0",
    "click>=8.1.7",
    # Przebarwialne ikony SVG (IconProvider) ze wspólnego kitu — własny kod
    # odzyskany z gui-kit. Tor Qt = extra [qt] (PySide6 już mamy wyżej).
    # Przypięte do commit SHA wydania (tagi są mutowalne; SHA jest niezmienny).
    "chodzkos-gui-kit[qt] @ git+https://github.com/chodzkos/gui-kit@4737e631632ea805a5fd48186d2aad323f59583e",  # v0.5.4
]

[project.optional-dependencies]
svg = ["cairosvg>=2.7.0"]
svg-resvg = ["resvg-py"]
heic = ["pillow-heif>=0.16.0"]
bgremove = ["rembg>=2.0.50"]
exe = ["pefile>=2023.2.7"]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-Pillow",
]
all = ["icoforge[svg,heic,bgremove,exe]"]

[project.scripts]
icoforge = "icoforge.__main__:run_gui"
icoforge-cli = "icoforge.cli:main"

[project.urls]
Repository = "https://github.com/chodzkos/icoforge"
Issues = "https://github.com/chodzkos/icoforge/issues"

# Zależność chodzkos-gui-kit to referencja bezpośrednia (git+https @ tag) — do
# czasu publikacji kitu na PyPI hatchling wymaga jawnej zgody.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/icoforge"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PTH", # use pathlib
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"src/icoforge/gui/**" = ["N802"]  # Qt requires camelCase override names

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["oxipng.*", "cairosvg.*", "resvg_py.*", "rembg.*", "pillow_heif.*", "pefile.*"]
ignore_missing_imports = true

# numpy 2.5+ publikuje stuby w składni PEP 695 (`type X = …`), którą mypy z
# python_version=3.11 odrzuca jako „3.12-only" (objaw na CI 3.12 z najnowszym numpy;
# lokalnie ze starszym numpy nie wychodziło). Nie parsujemy stubów numpy (→ Any),
# żeby zachować target 3.11 i nie pinować runtime'owego numpy pod jedną wersję.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow",
    "gui: marks tests that require Qt",
]

[tool.coverage.run]
source = ["src/icoforge"]
omit = ["src/icoforge/gui/*"]  # GUI tested separately

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
